# mbot

./: pull_and_build.sh
docs/: mplayer_client_command  videoStreamer.service
libs/mbot_core/mbotCore/: CMakeLists.txt
libs/mbot_core/mbotCore/inc/: mbot_args_parser.h  mbot_defs.h  mbot_logger.h  mbot_logger_defs.h  mbot_tcp_server.h
libs/mbot_core/mbotCore/src/: mbot_args_parser.cpp  mbot_logger.cpp  mbot_tcp_server.cpp
libs/mbot_video_capture/mbotVideoCapture/: CMakeLists.txt
libs/mbot_video_capture/mbotVideoCapture/inc/: mbot_video_buffer.h  mbot_video_capture.h  mbot_video_config.h
libs/mbot_video_capture/mbotVideoCapture/src/: mbot_video_buffer.cpp  mbot_video_capture.cpp
tools/mbot_simpleAndroidVideoClient/app/: build.gradle
tools/mbot_simpleAndroidVideoClient/app/src/androidTest/java/tools/mbot/domurad/mbotsimpleandroidvideoclient/: ExampleInstrumentedTest.java
tools/mbot_simpleAndroidVideoClient/app/src/main/: AndroidManifest.xml
tools/mbot_simpleAndroidVideoClient/app/src/main/java/tools/mbot/domurad/mbotsimpleandroidvideoclient/: MainActivity.java  VideoPlayer.java
tools/mbot_simpleAndroidVideoClient/app/src/main/res/layout/: activity_main.xml
tools/mbot_simpleAndroidVideoClient/app/src/main/res/values/: strings.xml
tools/mbot_simpleAndroidVideoClient/app/src/test/java/tools/mbot/domurad/mbotsimpleandroidvideoclient/: ExampleUnitTest.java
tools/mbot_simpleAndroidVideoClient/gradle/wrapper/: gradle-wrapper.properties
tools/mbot_videoStreamer/mbotVideoStreamer/: CMakeLists.txt  video_server_app.cpp
